<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".Fragments.PanchayatFragment">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_background"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative"
        android:layout_above="@id/btnHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_below="@id/imgTop">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchHome"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/home_page"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchNomination"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/nomination"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/admob_native_container"
                    layout="@layout/admob_native_medium"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panch2021"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/candidates"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchBooth"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/know_your_booth"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchPDF"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/electoral_roll_pdf"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchSearch"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:paddingEnd="20dp"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/search_electoral_roll"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchCount"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/vote_count"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchList"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/panchayat_voter_list"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchCandidates"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/contesting_candidates"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/panchTrack"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_btn"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:elevation="3dp"
                    android:paddingStart="20dp"
                    android:text="@string/photo"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_blue"
        android:drawableStart="@drawable/ic_1"
        android:drawableEnd="@drawable/ic_1"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/back_to"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>